# basic-application-django

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/: cadastro.html  index.html  indexon.html  login.html
django2/: settings.py  urls.py  wsgi.py
