[tool.poetry]
name = "django2"
version = "0.1.0"
description = ""
authors = ["davilos <daviloscostagg@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
beautifulsoup4 = "4.11.1"
black = "22.1.0"
blue = "0.9.1"
click = "8.1.3"
dj-database-url = "1.0.0"
django = "4.1.2"
django-bootstrap4 = "22.2"
django-on-heroku = "1.1.2"
django-stdimage = "6.0.1"
flake8 = "4.0.1"
gunicorn = "20.1.0"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
mysql = "0.0.3"
mysqlclient = "2.1.1"
pathspec = "0.10.1"
pillow = "9.2.0"
platformdirs = "2.5.2"
psycopg2-binary = "2.9.4"
pycodestyle = "2.8.0"
pyflakes = "2.4.0"
pymysql = "1.0.2"
soupsieve = "2.3.2.post1"
sqlparse = "0.4.3"
tomli = "2.0.1"
dj-static = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"